Bug 835793 - Fix errors in the list of modules supported by Fennec - Updated `widget` as unsupported module - Added `page-worker` and `system` as supported module - Added Flavored MD syntax for deleted content (~~) - Updated `sdk-docs.css` - Removed comments from `mobile.md` to make it more readable

--- a/doc/static-files/css/sdk-docs.css
+++ b/doc/static-files/css/sdk-docs.css
@@ -441,8 +441,8 @@ ul.tree ul li:last-child {
   background: #fff url("../media/icons/lastnode.png") no-repeat;
 }
 
-ul.module-list,
-ul#module-index {
+ul#module-index,
+h2[id="Module Compatibility"] ~ ul {
   border-color: #a0d0fb;
   border: solid 1px #a0d0fb;
   padding: 1em;
@@ -455,8 +455,6 @@ ul#module-index {
   column-gap: 1em;
 }
 
-span.unsupported-on-mobile,
-ul.module-list li.unsupported-on-mobile,
-ul.module-list li.unsupported-on-mobile > a {
-  color: maroon;
+span.unsupported-on-mobile {
+  text-decoration: line-through;
 }
